@@ -31,7 +31,14 @@ import java.io.Reader;
  */
 public class BinaryResponseParser extends ResponseParser {
   public static final String BINARY_CONTENT_TYPE = "application/octet-stream";
-  
+
+  private JavaBinCodec.StringCache stringCache;
+
+  public BinaryResponseParser setStringCache(JavaBinCodec.StringCache cache) {
+    this.stringCache = cache;
+    return this;
+  }
+
   @Override
   public String getWriterType() {
     return "javabin";
@@ -40,7 +47,7 @@ public class BinaryResponseParser extends ResponseParser {
   @Override
   public NamedList<Object> processResponse(InputStream body, String encoding) {
     try {
-      return (NamedList<Object>) new JavaBinCodec().unmarshal(body);
+      return (NamedList<Object>) new JavaBinCodec(null,stringCache).unmarshal(body);
     } catch (IOException e) {
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "parsing error", e);
 
